Avoid overflow of enterprise list when only few enterprises present

--- a/app/webpacker/css/admin_v3/dashboard/dashboard_item.scss
+++ b/app/webpacker/css/admin_v3/dashboard/dashboard_item.scss
@@ -109,7 +109,7 @@ div.dashboard_item {
   .list-item {
     border: solid $spree-blue;
     border-width: 0px 1px 0px 1px;
-    height: 38px;
+    height: 41px;
 
     span.alpha {
       font-weight: bold;
